Add read-only policy file and initialize test files